--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-redis_cache/__pycache__/
-redis_cache/__pycache__/*
-redis_cache/dump.rdb
+redis_queue/__pycache__/
+redis_queue/__pycache__/*
+redis_queue/dump.rdb
