--- a/rq-service/Dockerfile
+++ b/rq-service/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.7.2
 
 ENV BIND_PORT 5000
-ENV REDIS_HOST localhost
-ENV REDIS_PORT 6379
+ENV QUEUE_HOST localhost
+ENV QUEUE_PORT 6379
+ENV CACHE_HOST localhost
+ENV CACHE_PORT 6379
 
 COPY ./requeriments.txt /requeriments.txt
 
