changes on rq-service/service.py and rq-service/Dockerfile

--- a/rq-service/Dockerfile
+++ b/rq-service/Dockerfile
@@ -9,6 +9,7 @@ ENV CACHE_PORT 6379
 COPY ./requeriments.txt /requeriments.txt
 
 RUN pip install -r /requeriments.txt
+RUN pip install -U flask-cors
 
 COPY ./service.py ./service.py
 COPY jobs/actions.py ./actions.py
