--- a/nginx-lb/load-balancer.conf
+++ b/nginx-lb/load-balancer.conf
@@ -2,6 +2,7 @@
 
 # Round-robin load balance by default
 upstream backend {
+  ip_hash;
   # least_conn; # To redirect requests to services with least connections
   server sdgamelab_rq-service_1:5000;
   server sdgamelab_rq-service_2:5000;
@@ -12,6 +13,12 @@ server {
   listen 80;
   
   location / {
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_http_version 1.1;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
     proxy_pass http://backend;
+    proxy_redirect off;
   }
 }
